[gd_scene load_steps=20 format=3 uid="uid://c44pmvnqnqyx6"]

[ext_resource type="Script" path="res://cannon_pig.gd" id="1_ur3ut"]
[ext_resource type="Texture2D" uid="uid://dyygf4lueutyi" path="res://assets/07-Pig With a Match/Lighting the Cannon (26x18).png" id="2_2wi0o"]
[ext_resource type="Texture2D" uid="uid://beguyeujr3gc6" path="res://assets/07-Pig With a Match/Lighting the Match (26x18).png" id="3_i4iw0"]
[ext_resource type="Texture2D" uid="uid://derwtt3vqalqb" path="res://assets/10-Cannon/Shoot (44x28).png" id="4_le4he"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ra77x"]
size = Vector2(17, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t7qw"]
atlas = ExtResource("3_i4iw0")
region = Rect2(0, 0, 26, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gx3e"]
atlas = ExtResource("3_i4iw0")
region = Rect2(26, 0, 26, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn6fi"]
atlas = ExtResource("3_i4iw0")
region = Rect2(52, 0, 26, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4wds"]
atlas = ExtResource("2_2wi0o")
region = Rect2(0, 0, 26, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8qsk"]
atlas = ExtResource("2_2wi0o")
region = Rect2(26, 0, 26, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jllf"]
atlas = ExtResource("2_2wi0o")
region = Rect2(52, 0, 26, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_roi1v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t7qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gx3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn6fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4wds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8qsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jllf")
}],
"loop": false,
"name": &"LightCannon",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghy73"]
bg_color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojdmh"]
bg_color = Color(0, 0.717647, 0.388235, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_bkdy5"]
atlas = ExtResource("4_le4he")
region = Rect2(0, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_r44m1"]
atlas = ExtResource("4_le4he")
region = Rect2(44, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1ia0"]
atlas = ExtResource("4_le4he")
region = Rect2(88, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnsjd"]
atlas = ExtResource("4_le4he")
region = Rect2(132, 0, 44, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_81lci"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkdy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r44m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1ia0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnsjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkdy5")
}],
"loop": false,
"name": &"Fire",
"speed": 5.0
}]

[node name="cannon_pig" type="CharacterBody2D"]
script = ExtResource("1_ur3ut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_ra77x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -1)
sprite_frames = SubResource("SpriteFrames_roi1v")
animation = &"LightCannon"

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -46.0
offset_top = -24.0
offset_right = 46.0
offset_bottom = -17.0
theme_override_styles/background = SubResource("StyleBoxFlat_ghy73")
theme_override_styles/fill = SubResource("StyleBoxFlat_ojdmh")
value = 100.0
show_percentage = false

[node name="CannonAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(-28, 0)
sprite_frames = SubResource("SpriteFrames_81lci")
animation = &"Fire"

[node name="CannonTimer" type="Timer" parent="."]
wait_time = 2.371

[node name="CannonDetectArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CannonDetectArea"]
position = Vector2(-84, -43)
scale = Vector2(2.74743, 2.9072)
polygon = PackedVector2Array(17.9669, 13.9326, -241, -91, -240, 107)

[connection signal="timeout" from="CannonTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="CannonDetectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="area_exited" from="CannonDetectArea" to="." method="_on_detect_area_area_exited"]
